@@ -143,7 +143,7 @@ package respectively.
 <i>sv(8)</i>, <i>runsv(8)</i>, <i>setsid(2)</i>, <i>runit(8)</i>, <i>runit-init(8)</i>,
 <i>runsvdir(8)</i>, <i>runsvchdir(8)</i> <p>
  <i>https://smarden.org/runit/</i><br>
-  <i>http://cr.yp.to/daemontools.html</i><br>
+  <i>https://cr.yp.to/daemontools.html</i><br>
  
 <h2><a name='sect7'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt; <p>
