@@ -12,7 +12,7 @@
 <hr>
 This is a collection of <tt>run</tt> scripts for popular services to have
 them monitored by the
-<a href="http://cr.yp.to/daemontools.html">daemontools</a> or
+<a href="https://cr.yp.to/daemontools.html">daemontools</a> or
 <a href="https://smarden.org/runit/">runit</a> package.
 If you have additional run scripts or one of these run scripts works for you on
 an operating system not stated here, please
