@@ -282,6 +282,6 @@ runsvdir(8),
 runsvchdir(8)
 .P
  https://smarden.org/runit/
- http://cr.yp.to/daemontools.html
+ https://cr.yp.to/daemontools.html
 .SH AUTHOR
 Gerrit Pape <pape@smarden.org>
